fix overflow in body

--- a/app/index.css
+++ b/app/index.css
@@ -115,6 +115,7 @@
 
 :where(html, body) {
   height: 100%;
+  overflow-x: hidden
 }
 
 :where(#root, #__next) {
